--- a/index.html
+++ b/index.html
@@ -81,6 +81,22 @@
       font-size: 1.2em;
       margin: 20px 0;
     }
+
+    .mensagem-destaque {
+      font-size: 1.4em;
+      margin: 30px 0;
+      color: #ffd54f;
+      background: rgba(255, 255, 255, 0.05);
+      padding: 20px;
+      border-radius: 10px;
+      animation: fadeIn 1.2s ease-in-out;
+      box-shadow: 0 0 10px #ffd54f88;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
   </style>
 </head>
 <body>
@@ -92,7 +108,7 @@
     </p>
 
     <div id="areaMensagem" style="display: none;">
-      <p id="mensagem"></p>
+      <p id="mensagem" class="mensagem-destaque"></p>
     </div>
 
     <div id="areaFormulario">
@@ -131,8 +147,7 @@
     const nomeURL = getParametroURL("nome");
     if (nomeURL) {
       const areaMensagem = document.getElementById("areaMensagem");
-      const mensagem = `${decodeURIComponent(nomeURL)}, você é o melhor pai do mundo! Feliz Dia dos Pais! ❤️`;
-
+      const mensagem = `${decodeURIComponent(nomeURL)}, neste Dia dos Pais, quero te lembrar o quanto você é incrível. Sua força, dedicação e amor moldaram quem eu sou. Obrigado por tudo! 💙👨‍👧‍👦 Feliz Dia dos Pais!`;
       areaMensagem.style.display = "block";
       document.getElementById("mensagem").innerText = mensagem;
     }
